# Computer-engineering-FICT

./: README.md
I семестр/Комп'ютерна логіка/: AFDK-INST.rar  Диаграма Вейча на 6.docx  Реферат.docx
I семестр/Математичний аналіз - 1/: prikladi.doc
II семестр/Комп_ютерна арифметика/: Vkaziv_ZALIK_KL2.doc
II семестр/Математичний аналіз 1-2/: Білети на екзамен_2013.docx
III семестр/Теорія ймовірності/: Teor_ver_lab3.rar  Билеты по теории вероятностей.doc  Нормальное распределение.docx  Основні закони розподілу ймовірностей.htm  Приложение.docx  расчетный_макет.xls
III семестр/Філософія/: презенташка.ppt
IV семестр/ІПЗ 2 - ППЗ/: КУРСОВА РОБОТА.docx
V семестр/Архітектура ПЗ/: Лабораторна робота №4.docx  звіт 7-8.docx  лаба 3.docx
V семестр/Комп'ютерне моделювання/: matrix_game.xlsx  zadachi.doc
V семестр/Системне програмування - 2/Курсова робота/Редько/Floating_Point_Operations_For_Integer_Processors/downloads/FLIP/flip-0.1/: Makefile.am  Makefile.in  NEWS  README  aclocal.m4  configure  configure.ac  flip-config.in
V семестр/Системне програмування - 2/Курсова робота/Редько/Floating_Point_Operations_For_Integer_Processors/downloads/FLIP/flip-0.1/doc/: Doxyfile  Makefile.am  Makefile.in  devel.dox  example.dox  install.dox  mainpage.dox  refs.dox
V семестр/Системне програмування - 2/Курсова робота/Редько/Floating_Point_Operations_For_Integer_Processors/downloads/FLIP/flip-0.1/src/: Makefile.am  Makefile.in  fadd.c  fdiv.c  flip.h  flip_interface.h  fmul.c  fsqrt.c  fsub.c  interface.c
V семестр/Системне програмування - 2/Курсова робота/Редько/Floating_Point_Operations_For_Integer_Processors/downloads/FLIP/flip-0.1/src/internal/: internal.h  misc.h  product.h  rounding.h
V семестр/Системне програмування - 2/Курсова робота/Редько/Floating_Point_Operations_For_Integer_Processors/downloads/FLIP/flip-0.1/test/: Makefile.in  test_interface.c
V семестр/Системне програмування - 2/Курсова робота/Редько/Floating_Point_Operations_For_Integer_Processors/downloads/FLIP/flip-0.2/: AUTHORS  INSTALL  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  configure  configure.ac  flip-config.in
V семестр/Системне програмування - 2/Курсова робота/Редько/Floating_Point_Operations_For_Integer_Processors/downloads/FLIP/flip-0.2/src/: Makefile.am  Makefile.in  fadd.c  fdiv.c  fdiv_fast.c  flip.c  flip.h  flip_config.h.in  flip_interface.h  flip_isfunc.h  fma.c  fms.c  fmul.c  fsqrt.c  fsqrt_fast.c  fsub.c  interface.c  invsqrt.c  reciprocal.c  sqr.c
V семестр/Системне програмування - 2/Курсова робота/Редько/Floating_Point_Operations_For_Integer_Processors/downloads/FLIP/flip-0.2/src/internal/: internal.h  misc.h  product.h  rounding.h
V семестр/Системне програмування - 2/Курсова робота/Редько/Floating_Point_Operations_For_Integer_Processors/downloads/FLIP/flip-0.2/test/: Makefile.am  Makefile.in  test_interface.c
(+29661 files in other folders)
