AC_INIT([flip],[0.1])    dnl FIXME version number

AC_MSG_NOTICE([$PACKAGE_NAME version $PACKAGE_VERSION])
AM_INIT_AUTOMAKE([$PACKAGE_NAME],[$PACKAGE_VERSION])

AC_CONFIG_SRCDIR([src/flip.h])

AC_PROG_ST200_CC
AC_PROG_ST200_LD
AC_PROG_ST200_AR
AC_PROG_ST200_RANLIB
AC_PROG_ST200_RUN

AC_PROG_DOXYGEN

AC_PROG_INSTALL

AC_CHECK_STLIB

CFLAGS="$CFLAGS -I$STLIB"
CPPFLAGS=""
AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(CC,$ST200CC)
AC_SUBST(LD,$ST200LD)
AC_SUBST(AR,$ST200AR)
AC_SUBST(RANLIB,$ST200RANLIB)
AC_MSG_NOTICE([set default compilation tools to ST200 tools in Makefiles])

AC_SUBST(DESTDIR)

DATE=`date -I`
AC_SUBST(DATE)


AC_CONFIG_FILES([Makefile
		src/Makefile
		doc/Makefile 
		test/Makefile])
AC_CONFIG_FILES([flip-config],[chmod +x flip-config])

AC_OUTPUT

