AC_INIT([flip],[0.2])

AC_MSG_NOTICE([$PACKAGE_NAME version $PACKAGE_VERSION])
AM_INIT_AUTOMAKE([$PACKAGE_NAME],[$PACKAGE_VERSION])

AC_CONFIG_SRCDIR([src/flip.h])

AC_PROG_INSTALL

AC_CHECK_STLIB
CFLAGS="$CFLAGS -I$STLIB"

AC_FLIP_SUBNORMALS
AC_FLIP_ALL_RND_MODES
AC_FLIP_FAST_OPERATIONS
AC_FLIP_ST220

AC_PROG_ST200_CC
AC_PROG_ST200_LD
AC_PROG_ST200_AR
AC_PROG_ST200_RANLIB
dnl AC_PROG_ST200_RUN

if test x$CC = xgcc; then
  AC_MSG_NOTICE([EMULATION MODE, build FLIP using gcc ])
  AC_DEFINE([__GCC_EMULATION_MODE])
  AC_SUBST(LD,ld)
  AC_SUBST(AR,ar)
  AC_SUBST(RANLIB,ranlib)
else
  AC_SUBST(CC,$ST200CC)
  AC_SUBST(LD,$ST200LD)
  AC_SUBST(AR,$ST200AR)
  AC_SUBST(RANLIB,$ST200RANLIB)
fi

dnl AC_PROG_DOXYGEN

CPPFLAGS=""
AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(DESTDIR)

DATE=`date -I`
AC_SUBST(DATE)

AC_CONFIG_FILES([Makefile
		src/Makefile
		src/flip_config.h
		test/Makefile])
#               doc/Makefile

AC_CONFIG_FILES([flip-config],[chmod +x flip-config])

AC_OUTPUT

